apps/devflux-dev/service-artifact-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifact-server
  labels:
    app: artifact-server
    component: artifacts
    environment: dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: artifact-server
    environment: dev
